--- a/mohamed/index.html
+++ b/mohamed/index.html
@@ -18,15 +18,15 @@
             <div class="processing-container">
 
                 <div class="processing-item">
-                    <img src="images/download.svg" alt="">
+                    <img class="img1" src="images/download.png" alt="">
                 </div>
 
                 <div class="processing-item">
-                    <img src="images/file.svg" alt="">
+                    <img class="img2" src="images/file.png" alt="">
                 </div>
 
                 <div class="processing-item">
-                    <img src="images/file-success.svg" alt="">
+                    <img class="img3" src="images/file-success.png" alt="">
                 </div>
 
                 <!-- <div class="processing-label"> -->
