--- a/mohamed/index.html
+++ b/mohamed/index.html
@@ -24,14 +24,19 @@
                 <div class="processing-item">
                     <img class="img2" src="images/file.png" alt="">
                 </div>
+                <div class="processing-item">
+                    <img class="img-double" src="images/file.png" alt="">
+                </div>
 
                 <div class="processing-item">
                     <img class="img3" src="images/file-success.png" alt="">
                 </div>
 
                 <!-- <div class="processing-label"> -->
-                    <span class="processing-label">Processing...</span>
-                    <span class="processing-label">Done</span>
+                    <span class="processing label1">Processing...</span>
+                    <span class="processing label2">Processing...</span>
+                    <span class="processing label3">Processing...</span>
+                    <span class="processing label-done">Done</span>
                 <!-- </div> -->
             </div>
         </div>
