--- a/daniel/index.html
+++ b/daniel/index.html
@@ -1,41 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Processing</title>
-</head>
+  </head>
 
-<body>
-    <section class="page page-center">
-        <div>
+  <body>
+    <div class="processing-container">
+      <strong>Hover for effect</strong>
+      <div class="processing-item">
+        <img src="../images/download.png" alt="" id="img-folder" />
+      </div>
 
-            <div class="processing-container">
+      <div class="processing-item">
+        <img src="../images/file.png" alt="" id="img-file" />
+      </div>
 
-                <div class="processing-item">
-                    <img src="images/download.svg" alt="">
-                </div>
+      <div class="processing-item">
+        <img src="../images/file-success.png" alt="" id="img-success" />
+      </div>
 
-                <div class="processing-item">
-                    <img src="images/file.svg" alt="">
-                </div>
-
-                <div class="processing-item">
-                    <img src="images/file-success.svg" alt="">
-                </div>
-
-                <!-- <div class="processing-label"> -->
-                    <span class="processing-label">Processing...</span>
-                    <span class="processing-label">Done</span>
-                <!-- </div> -->
-            </div>
-        </div>
-    </section>
-</body>
-
+      <div class="processing-label">
+        <span id="processing">Processing...</span>
+      </div>
+      <div class="processing-label">
+        <span id="done">Done</span>
+      </div>
+    </div>
+  </body>
 </html>
